# katcp-codec

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  Cargo.toml  README.md  README.rst  build.rs  doc-requirements.txt  pyproject.toml  requirements.txt
.ci/: before_all_linux.sh
.github/workflows/: test.yml
benches/: bench_format.rs  bench_parse.rs
crates/fsm/: Cargo.toml
crates/fsm/src/: lib.rs
doc/: changelog.rst  conf.py  design.rst  index.rst  installation.rst  introduction.rst  katcp_codec.rst  modules.rst  usage.rst
python/katcp_codec/: __init__.py  _lib.pyi
python/tests/: test_format.py  test_message.py  test_parse.py
src/: binding.rs  format.rs  lib.rs  message.rs  parse.rs  tables.rs  test.rs
