################################################################################
# Copyright (c) 2024, National Research Foundation (SARAO)
#
# Licensed under the BSD 3-Clause License (the "License"); you may not use
# this file except in compliance with the License. You may obtain a copy
# of the License at
#
#   https://opensource.org/licenses/BSD-3-Clause
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
################################################################################

[package]
name = "katcp-codec"
edition = "2021"

[lib]
name = "_lib"
crate-type = ["cdylib", "rlib"]  # rlib included just for testing

# TODO: gil-refs currently seems to be required, but it should be removed
# when possible.
[dependencies]
enum-map = "2.7.3"
itoa = "1.0.10"
once_cell = "1.19.0"
pyo3 = { version = "0.21.0-beta.0", features = ["extension-module"] }
thiserror = "1.0.58"
uninit = "0.6.2"

[dev-dependencies]
criterion = "0.5.1"
proptest = "1.4.0"
rstest = { version = "0.18.2", default-features = false }

[[bench]]
name = "bench_format"
harness = false
