################################################################################
# Copyright (c) 2024, National Research Foundation (SARAO)
#
# Licensed under the BSD 3-Clause License (the "License"); you may not use
# this file except in compliance with the License. You may obtain a copy
# of the License at
#
#   https://opensource.org/licenses/BSD-3-Clause
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
################################################################################

[package]
name = "katcp-codec"
edition = "2021"

[profile.release]
lto = true

[lib]
name = "_lib"
crate-type = ["cdylib", "rlib"]  # rlib included just for testing
bench = false

[dependencies]
adjacent-pair-iterator = "1.0.0"
enum-map = "2.7.3"
itoa = "1.0.10"
katcp-codec-fsm = { path = "crates/fsm", features = ["pyo3"] }
pyo3 = { version = "0.25.1", features = ["extension-module"] }
thiserror = "2.0.12"
uninit = "0.6.2"

[dev-dependencies]
criterion = "0.7.0"
proptest = "1.4.0"
rstest = { version = "0.26.1", default-features = false }

[build-dependencies]
enum-map = "2.7.3"
katcp-codec-fsm = { path = "crates/fsm" }

[[bench]]
name = "bench_format"
harness = false

[[bench]]
name = "bench_parse"
harness = false
